--- a/force-app/main/default/lwc/productDataTable/productDataTable.html
+++ b/force-app/main/default/lwc/productDataTable/productDataTable.html
@@ -1,25 +1,27 @@
 <template>
   <lightning-card>
-      <div class="slds-var-p-around_small">
-          <div>
-              <span
-                  class="slds-form-element__label slds-text-title_bold slds-align_absolute-center">
-                  Infinite Loading Example</span>
-          </div>
-          <div>
-              <span class="slds-form-element__label slds-text-title_bold">
-                  Total Records: {totalNumberOfRows}</span>
-          </div>
-          <div>
-              <span class="slds-form-element__label slds-text-title_bold">
-                  Displayed Records: {data.length}</span>
-          </div>
-          <div class="slds-box" style="height: 400px;">
-              <lightning-datatable key-field="Id" data={data} columns={columns} load-more-offset="20"
-                  onloadmore={handleLoadMore} enable-infinite-loading hide-checkbox-column show-row-number-column>
-              </lightning-datatable>
-          </div>
-          {loadMoreStatus}
+    <div class="slds-var-p-around_small">
+      <div>
+        <span class="slds-form-element__label slds-text-title_bold slds-align_absolute-center">
+          Infinite Loading
+        </span>
       </div>
+    </div>
+    <div>
+      <span class="slds-form-element__label slds-text-title_bold">
+        Total Records: {totalNumberOfRows}
+      </span>
+    </div>
+    <div>
+      <span class="slds-form-element__label slds-text-title_bold">
+        Displayed Records: {data.length}
+      </span>
+    </div>
+    <lightning-button onclick={getSelected} label="Get Selected Rows"></lightning-button>
+    <div style="height: 350px;" if:true={boolVisible}>
+      <lightning-datatable key-field="Id" data={data} columns={columns} enable-infinite-loading onloadmore={handleLoadMore} selected-rows={preselectedRows}>
+      </lightning-datatable>
+    </div>
+    {loadMoreStatus}
   </lightning-card>
 </template>
