added logic to show selected rows

--- a/force-app/main/default/lwc/productDataTable/productDataTable.html
+++ b/force-app/main/default/lwc/productDataTable/productDataTable.html
@@ -26,9 +26,19 @@
         enable-infinite-loading 
         onloadmore={handleLoadMore} 
         selected-rows={preselectedRows}
-        onrowselection={selectedRowHandler}>
+        onrowselection={selectedRowHandler}
+        load-more-offset="20">
       </lightning-datatable>
     </div>
     {loadMoreStatus}
+    <div style="height: 350px;" if:false={boolVisible}>
+      <lightning-datatable 
+        key-field="Id" 
+        data={selectedData} 
+        columns={columns}  
+        selected-rows={preselectedRows}
+        onrowselection={selectedRowHandler}>
+      </lightning-datatable>
+    </div>
   </lightning-card>
 </template>
