changed to prd version table and logic

--- a/force-app/main/default/lwc/productDataTable/productDataTable.html
+++ b/force-app/main/default/lwc/productDataTable/productDataTable.html
@@ -3,7 +3,10 @@
     <div class="slds-var-p-around_small">
       <div>
         <span class="slds-form-element__label slds-text-title_bold slds-align_absolute-center">
-          Infinite Loading
+          Product Search
+        </span >
+        <span class="slds-form-element__label slds-text-title_bold slds-align_absolute-center">
+          Quote Id: {recordId}
         </span>
       </div>
     </div>
@@ -17,7 +20,11 @@
         Displayed Records: {data.length}
       </span>
     </div>
-    <lightning-button onclick={showSelected} label="Show Selected Rows"></lightning-button>
+    <!--show select rows-->
+    <div>
+      <lightning-button onclick={showSelected} label="Show Selected Rows"></lightning-button>
+    </div>
+    <!--product display table-->
     <div style="height: 350px;" if:true={boolVisible}>
       <lightning-datatable 
         key-field="Id" 
@@ -31,6 +38,7 @@
       </lightning-datatable>
     </div>
     {loadMoreStatus}
+    <!--show select products table-->
     <div style="height: 350px;" if:false={boolVisible}>
       <lightning-datatable 
         key-field="Id" 
@@ -42,40 +50,38 @@
     </div>
     <lightning-button onclick={toEditRowData} label="Next"></lightning-button>
   </lightning-card>
+  <!--edit selected products-->
   <lightning-card if:true={editRowDataView}>
-    Hello!
+    This is the selected product table!
     <div class="slds-m-around_medium">
       <table class="slds-table slds-table_cell-buffer slds-table_bordered slds-table_resizable-cols" aria-labelledby="element-with-table-label other-element-with-table-label">
           <thead>
               <tr class="slds-line-height_reset">
                   <th class="" scope="col">
-                      <div class="slds-truncate" title="Account Link">Account Link</div>
+                      <div class="slds-truncate" title="Product Name">Product Name</div>
                   </th>
                   <th class="" scope="col">
-                      <div class="slds-truncate" title="Account Name">Account Name</div>
-                  </th>
-                  <th class="" scope="col">
-                      <div class="slds-truncate" title="Account Number">Account Number</div>
+                      <div class="slds-truncate" title="Product Name">Product Id</div>
                   </th>
               </tr>
           </thead>
           <tbody>
               <template for:each={selectedData} for:item="obj">
                   <tr class="inputRows" key={obj.Id}>
-                      <th data-label="Account Link" scope="row">
-                        <lightning-formatted-url value={obj.linkAccount} label="Account Link" target="_blank"></lightning-formatted-url>
+                      <th data-label="Product Name" scope="row">
+                        <lightning-formatted-url value={obj.linkName} label={obj.Name} target="_blank"></lightning-formatted-url>
                       </th>
-                      <th data-label="Account Name" scope="row">
-                          <lightning-input type="text" class="fields" variant="label-hidden" label="Account Name" name="Name" value={obj.Name} data-id={obj.Id} onchange={updateValues}></lightning-input>
+                      <th data-label="Product Id" scope="row">
+                          <lightning-input type="text" class="fields" variant="label-hidden" label="Product Id" name="Name" value={obj.Id} data-id={obj.Id} onchange={updateValues}></lightning-input>
                       </th>
-                      <td data-label="Account Number">
-                          <lightning-input type="text" class="fields" variant="label-hidden" label="Account Number" name="AccountNumber" value={obj.AccountNumber} data-id={obj.Id} onchange={updateValues}></lightning-input>
-                      </td>
                   </tr>
               </template>
           </tbody>
       </table>
     </div>
-    <lightning-button onclick={toViewRowData} label="Back"></lightning-button>
+    <div>
+      <lightning-button onclick={toViewRowData} label="Back"></lightning-button>
+      <lightning-button onclick={toViewRowData} label="Save"></lightning-button>
+    </div>
   </lightning-card>
 </template>
