--- a/force-app/main/default/lwc/productDataTable/productDataTable.html
+++ b/force-app/main/default/lwc/productDataTable/productDataTable.html
@@ -100,7 +100,7 @@
                       <lightning-input type="number" class="fields" variant="label-hidden" label="UnitPrice" name="Product2Id" value={obj.UnitPrice} formatter="currency" step="0.01" data-id={obj.Product2Id} onchange={updateValues}></lightning-input>
                     </th>
                     <th data-label="Discount" scope="row">
-                      <lightning-input type="number" class="fields" variant="label-hidden" label="Discount" name="Product2Id" value={obj.Discount} formatter="percent" step="0.01" data-id={obj.Product2Id} onchange={updateValues}></lightning-input>
+                      <lightning-input type="number" class="fields" variant="label-hidden" label="Discount" name="Product2Id" value={obj.Discount} min="0" max="100" step="0.01" data-id={obj.Product2Id} onchange={updateValues}></lightning-input>
                     </th>
                     <th data-label="Line Item Comment" scope="row">
                         <lightning-input type="text" class="fields" variant="label-hidden" label="Comment" name="Product2Id" value={obj.Comment} data-id={obj.Product2Id} onchange={updateValues}></lightning-input>
