--- a/force-app/main/default/lwc/productDataTable/productDataTable.html
+++ b/force-app/main/default/lwc/productDataTable/productDataTable.html
@@ -21,6 +21,16 @@
       </span>
     </div>
     <!--show select rows-->
+    <div onkeyup={handleKeyUp}>
+      <lightning-input
+          name="enter-search"
+          label="Search when user hits the 'enter' key"
+          type="search"
+      ></lightning-input>
+    </div>
+    <p if:true={queryTerm}>
+      Searched for {queryTerm}!
+    </p>
     <div>
       <lightning-button onclick={showSelected} label="Show Selected Rows"></lightning-button>
     </div>
@@ -73,20 +83,6 @@
                   </th>
               </tr>
           </thead>
-          <!--
-          <tbody>
-              <template for:each={selectedData} for:item="obj">
-                  <tr class="inputRows" key={obj.Id}>
-                      <th data-label="Product Name" scope="row">
-                        <lightning-formatted-url value={obj.linkName} label={obj.Name} target="_blank"></lightning-formatted-url>
-                      </th>
-                      <th data-label="Product Id" scope="row">
-                          <lightning-input type="text" class="fields" variant="label-hidden" label="Product Id" name="Name" value={obj.Id} data-id={obj.Id} onchange={updateValues}></lightning-input>
-                      </th>
-                  </tr>
-              </template>
-          </tbody>
-          -->
           <tbody>
             <template for:each={PBEListFinal} for:item="obj">
                 <tr class="inputRows" key={obj.Id}>
