pushed QLI to Quote

--- a/force-app/main/default/lwc/productDataTable/productDataTable.html
+++ b/force-app/main/default/lwc/productDataTable/productDataTable.html
@@ -40,7 +40,7 @@
         key-field="Id" 
         data={data} 
         columns={columns} 
-        enable-infinite-loading 
+        enable-infinite-loading
         onloadmore={handleLoadMore} 
         selected-rows={preselectedRows}
         onrowselection={selectedRowHandler}
@@ -76,7 +76,7 @@
                       <div class="slds-truncate" title="Sales Price">Sales Price</div>
                   </th>
                   <th class="" scope="col">
-                    <div class="slds-truncate" title="Discount">Discount</div>
+                    <div class="slds-truncate" title="Discount %">Discount %</div>
                   </th>
                   <th class="" scope="col">
                     <div class="slds-truncate" title="Line Item Comment">Line Item Comment</div>
