--- a/force-app/main/default/lwc/productDataTable/productDataTable.html
+++ b/force-app/main/default/lwc/productDataTable/productDataTable.html
@@ -73,6 +73,9 @@
         </lightning-layout-item>
       </lightning-layout>
     </div>
+    <div>
+      AND
+    </div>
     <!--Search row 2-->
     <div>
       <lightning-layout horizontal-align="space">
@@ -117,6 +120,9 @@
           </div>
         </lightning-layout-item>
       </lightning-layout>
+    </div>
+    <div>
+      AND
     </div>
     <!--Search row 3-->
     <div>
